infrastructure/dashboard/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dashboard
  labels:
    app.kubernetes.io/name: dashboard
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: dashboard
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: dashboard
    spec:
      serviceAccountName: dashboard
      containers:
        - name: dashboard
          image: registry.gitlab.com/felixz92/dashboard:v0.1.5
          imagePullPolicy: IfNotPresent
          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 3
            timeoutSeconds: 2
          readinessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 3
          ports:
            - containerPort: 3000
              protocol: TCP
              name: web
          securityContext:
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
            runAsGroup: 65532
            runAsNonRoot: true
            runAsUser: 65532
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
            limits:
              cpu: 20m
              memory: 64Mi
