infrastructure/dashboard/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dashboard
spec:
  selector:
    app.kubernetes.io/name: dashboard
  ports:
    - name: dashboard
      port: 3000
      protocol: "TCP"
      targetPort: "web"
  type: ClusterIP
