infrastructure/dashboard/base/ingressroute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: dashboard
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`dashboard.${BASE_DOMAIN}`)
      kind: Rule
      services:
        - name: dashboard
          port: 3000
      middlewares:
        - name: redirect-https
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: dashboard-tls
spec:
  entryPoints:
    - websecure
  tls:
    secretName: tls-dashboard-ingress
  routes:
    - match: Host(`dashboard.${BASE_DOMAIN}`)
      kind: Rule
      middlewares:
        - name: traefik-forward-auth
      services:
        - name: dashboard
          port: 3000
